# ElectronicsSim

./: CMakeLists.txt  README.md
attic/: RAWIDODSync.cpp  RAWIDODSync.h
configfiles/: AppConfig  InterfaceConfig
include/: DAQHeader.h  IDODHit.h  IDODSync.h  Msg.h  SlowControls.h
src/: DAQHeader.cpp  IDODHit.cpp  IDODSync.cpp  sim.cpp
